# smallbigint

./: .gitignore  Cargo.toml  README.md  package-lock.json  package.json
.github/workflows/: rust.yml
examples/strange_prime_factorization/: main.rs  using_bigint.rs  using_smallbigint.rs  using_u32.rs
src/: lib.rs  to_primitive_generic.rs  unsafeu32orbox.rs
