[package]
name = "smallbigint"
version = "0.5.0"
authors = ["Bram Geron <bram@bram.xyz>"]
description = "Big integer types that have a small on-stack representation for small values. Uses num-bigint internally."
edition = "2018"
license = "MIT OR Apache-2.0"
repository = "https://github.com/rusty-plasma/smallbigint"
readme = "README.md"

categories = ["data-structures"]
keywords = ["bigint", "integer", "number"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
num-bigint = "0.2.6"
num-traits = "0.2.11"
either = "1.5.3"
num-integer = "0.1.42"
