[package]
name = "smallbigint"
version = "1.0.1"
authors = ["Bram Geron <bram@bram.xyz>"]
description = "Big integer types that have a small on-stack representation for small values. Uses num-bigint internally."
edition = "2018"
license = "MIT OR Apache-2.0"
repository = "https://github.com/rusty-plasma/smallbigint"
readme = "README.md"

categories = ["data-structures"]
keywords = ["bigint", "integer", "number"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
num-bigint = "0.2.6"
num-traits = "0.2.11"
either = "1.5.3"
num-integer = "0.1.42"

[dev-dependencies]
num-iter = "0.1.40"
structopt = "0.3.12"
anyhow = "1.0.35"

[features]
# Enable this feature to be able to run the benchmark tests.
# This flag might go away in the near future when benchmarks
# are available on cargo stable.
bench = []
benchall = []
